# Arwah

./: .clangd  .gitignore  Cargo.toml  Cross.toml  LICENSE-MIT  README.md  build.rs  rust-analyzer.json
.github/workflows/: ci.yml  tests.yml
art/packaging/linux/AppImage/: sniffnet.yml
arwah-engine/: Cargo.toml
arwah-engine/src/: lib.rs  session.rs
arwah-engine/src/alert/: mod.rs
arwah-engine/src/analysis/: dissector.rs  flow_tracker.rs  mod.rs
arwah-engine/src/blacklist/: mod.rs
arwah-engine/src/capture/: afpacket.rs  live.rs  mod.rs  pcap_file.rs
arwah-engine/src/dpi/: mod.rs
arwah-engine/src/filter/: display.rs  mod.rs
arwah-engine/src/geo/: mod.rs
arwah-engine/src/output/: eve.rs  mod.rs  rotating_pcap.rs
arwah-engine/src/rules/: mod.rs
arwah-engine/src/stats/: mod.rs
arwah-engine/src/stream/: mod.rs
b579-core/: Cargo.toml
b579-core/src/: alert.rs  capture.rs  dpi.rs  error.rs  filter.rs  flow.rs  lib.rs  packet.rs  protocol.rs  stats.rs
bpf/: bpf.h  bpf_exec.c
proto/: checksum.c  dns.c  eth.c  icmp.c  ip4.c  ip6.c  proto.h  tcp.c  tls.c  udp.c
resources/themes/: README.md
src/: main.rs
src/cli/: commands.rs  mod.rs  output.rs
src/ffi/: bpf.rs  mod.rs  proto.rs
src/tui/: app.rs  event.rs  mod.rs  render.rs
src/tui/widgets/: dashboard.rs  flows.rs  mod.rs  packets.rs
